rest file added

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: linear-gradient(135deg, rgba(148, 0, 211, 0.8) 0%, rgba(75, 0, 130, 0.5) 100%); */
+
 }
 
 code {
