--- a/src/OtherTable.css
+++ b/src/OtherTable.css
@@ -47,6 +47,10 @@
   .card-containerother {
     grid-template-columns: repeat(1, 1fr); /* 1 column for mobile */
   }
+  .cardother
+  {
+    width: 345px;
+  }
 }
 
 
