--- a/src/Seowidget.css
+++ b/src/Seowidget.css
@@ -1,7 +1,7 @@
 /* Container styles */
 .Seowidget {
   font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+  background-color: #e5e5e5;
   padding: 20px;
   text-align: center;
 }
@@ -15,7 +15,7 @@
 .Seowidget .Seowidget-input[type="text"] {
   width: calc(100% - 40px); /* Adjust the width and add 20px margin on each side */
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid black;
   border-radius: 5px;
   font-size: 16px;
   margin: 0 15px; /* Add margin to the left and right */
@@ -24,7 +24,7 @@
 /* Button styles */
 .Seowidget button {
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #3710d3;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -34,12 +34,15 @@
 }
 
 /* Result table styles */
-.Seowidget .result-table {
+ .result-table {
   margin-top: 20px;
+  background-color: #e5e5e5;
 }
 
+
+/* Add this CSS class for the spinner */
 .spinner {
-  border: 4px solid rgba(255, 255, 255, 0.3);
+  border: 4px solid #e5e5e5;
   border-radius: 50%;
   border-top: 4px solid #007bff; /* Change the color as needed */
   width: 40px;
@@ -56,8 +59,8 @@
 }
 
 
-/* Add a loading class to style the container when loading */
-.Seowidget.loading {
-  background-color: #fff;
+
+.loading {
+  background-color: #e5e5e5;
   opacity: 0.7;
 }
